Fixes lists not showing correctly within RTE.

--- a/tool-ui/src/main/webapp/style/rte-content.css
+++ b/tool-ui/src/main/webapp/style/rte-content.css
@@ -48,10 +48,13 @@ i {
 }
 
 ol,
-p,
 ul {
-    margin: 0 0 15px 0;
+    margin: 0 0 15px 25px;
     padding: 0;
+}
+
+p {
+    margin: 0 0 15px 0;
 }
 
 strike {
